# Fraction-Calculation

./: CMakeLists.txt  README.md  driver.cpp  fraction.cpp  fraction.h  fractionTesting.cpp  fraction_exception.h  makefile
build-dir/: CMakeCache.txt  Fraction-Testing  Fraction_Calculation  Makefile  cmake_install.cmake
